--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/* element styles */
+
 body {
   background: black;
   font-family: 'Open Sans',
@@ -19,14 +21,6 @@ header {
   box-shadow: 0 3px 3px 3px rgba(0, 0, 0, 0.472);
 }
 
-header h1 {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 1rem;
-  padding-bottom: .25rem;
-  background: #1c4587;
-  color: white;
-}
 
 footer {
   border: 2px solid black;
@@ -43,6 +37,17 @@ aside {
   padding-top: 5rem;
 }
 
+/* cascading element styles */
+
+header h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 1rem;
+  padding-bottom: .25rem;
+  background: #1c4587;
+  color: white;
+}
+
 aside h4 {
   margin-bottom: .25rem;
 }
@@ -50,6 +55,8 @@ aside h4 {
 aside p {
   font-size: .6rem;
 }
+
+/* class styles */
 
 .wrapper {
   background: white;
